Transactional API
Transform Kurento Client remote objects from interfaces to classes
Remove old typed factories and update tests to Builders and classes
Refactor build() to create() in Builders
Refactor 'new MediaElement.Builder(...)' by 'MediaElement.with(...)'
Refactor 'client.createMediaPipeline()' by
'MediaPipeline.with(client).create()'
Refactor fusioning RomClient with RomFactory in RomManager
Refactor reducing extra RomManager param in RemoteObject
Defer the creation of pipeline until pipeline.start()
Initial complete prototype of transaction support in kurento-client
Add compatibility with Kurento 5.0.3 deprecating classes and methods
Improve deprecating messages in old API
Added support for transaction requests in kurento-control-server
[bug-fix] Consider params of type Props when search for non ready objs
New Kurento Control Server banner
Add async execution of transactions
Reduce visibility of internal operations in Media elements
Remove warnings
Implementat Kurento client reconnections and listener
[bug-fix] Make several tests work again
[kurento-client] Remove async methods and implicit transaction
[kurento-client] Improve transaction tests
[kurento-control-server] Change default port to 8887
Clean dependencies
[kurento-control-server] Remode unused dependencies
[kurento-control-server] Improve start-up logging
[kurento-control-server] Bug fix reading KMS properties from config file
[bug-fix][kurento-control-server] Not use transaction op ids in kms reqs
[kurento-client] Clean up new kurento client

Change-Id: Id30387f303eac80c8ffb6bb96a65637ea6a96e7b